--- a/BBRepoList.Tests/BBRepoList.Tests.csproj
+++ b/BBRepoList.Tests/BBRepoList.Tests.csproj
@@ -13,10 +13,14 @@
 
 	<ItemGroup>
 		<PackageReference Include="coverlet.collector" Version="6.0.4" />
-		<PackageReference Include="FluentAssertions" Version="8.2.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.14.1" />
+		<PackageReference Include="FluentAssertions" Version="8.8.0" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
+		<PackageReference Include="Moq" Version="4.20.72" />
 		<PackageReference Include="xunit" Version="2.9.3" />
-		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.4" />
+		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
+		  <PrivateAssets>all</PrivateAssets>
+		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
 	</ItemGroup>
 	
 	<ItemGroup>
@@ -28,7 +32,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<NoWarn>CS1591,IDE0058</NoWarn>
+		<NoWarn>CS1591,IDE0058,IDE1006</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup>
