--- a/BBRepoList.Tests/BBRepoList.Tests.csproj
+++ b/BBRepoList.Tests/BBRepoList.Tests.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
@@ -16,6 +16,7 @@
 		<PackageReference Include="FluentAssertions" Version="8.8.0" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
 		<PackageReference Include="Moq" Version="4.20.72" />
+		<PackageReference Include="Spectre.Console.Testing" Version="0.54.0" />
 		<PackageReference Include="xunit" Version="2.9.3" />
 		<PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
 		  <PrivateAssets>all</PrivateAssets>
@@ -32,7 +33,7 @@
 	</PropertyGroup>
 
 	<PropertyGroup>
-		<NoWarn>CS1591,IDE0058,IDE1006</NoWarn>
+		<NoWarn>CS1591,IDE0058,IDE1006,CA2007</NoWarn>
 	</PropertyGroup>
 
 	<PropertyGroup>
