Add RetryCount to Bitbucket settings

--- a/BBRepoList/appsettings.json
+++ b/BBRepoList/appsettings.json
@@ -4,7 +4,8 @@
     "Workspace": "",
     "AuthEmail": "",
     "AuthApiToken": "",
-    "PageLen": 50
+    "PageLen": 50,
+    "RetryCount": 2
   },
   "Logging": {
     "LogLevel": {
