Add open PR data and Abandoned repos filter

--- a/BBRepoList/appsettings.json
+++ b/BBRepoList/appsettings.json
@@ -5,7 +5,8 @@
     "AuthEmail": "",
     "AuthApiToken": "",
     "PageLen": 50,
-    "RetryCount": 2
+    "RetryCount": 2,
+    "AbandonedMonthsThreshold": 12
   },
   "Logging": {
     "LogLevel": {
