--- a/BBRepoList/appsettings.json
+++ b/BBRepoList/appsettings.json
@@ -6,6 +6,7 @@
     "AuthApiToken": "",
     "PageLen": 50,
     "RetryCount": 2,
+    "LoadOpenPullRequestsStatistics": true,
     "AbandonedMonthsThreshold": 12
   },
   "Logging": {
