Add PDF Generator

--- a/BBRepoList/appsettings.json
+++ b/BBRepoList/appsettings.json
@@ -6,6 +6,10 @@
     "AuthApiToken": "",
     "PageLen": 50,
     "RetryCount": 2,
+    "Pdf": {
+      "Enabled": true,
+      "OutputPath": "bbrepolist-report.pdf"
+    },
     "LoadOpenPullRequestsStatistics": true,
     "AbandonedMonthsThreshold": 12
   },
