Add concurrent loading for PR Statistics

--- a/BBRepoList/appsettings.json
+++ b/BBRepoList/appsettings.json
@@ -11,6 +11,7 @@
       "OutputPath": "bbrepolist-report.pdf"
     },
     "LoadOpenPullRequestsStatistics": true,
+    "OpenPullRequestsLoadThreshold": 4,
     "AbandonedMonthsThreshold": 12
   },
   "Logging": {
